full implementation of runtime dumper